2015-03-18
- Fixed Clinkz Death Pact damage increase not calculating.
- Added Veil of Discord to debuffs section.
- Added Bloodseeker Bloodrage.

2015-02-22
- Fixed delta value colors for stats where a lower value is better (attack time and BAT).

2015-02-20
- Added Vengeful Spirit Vengeance Aura debuff.

2015-02-12
- Added Winter Wyvern

2015-01-29
- Build Explorer data now included in saved builds.

2015-01-25
- Added Build Explorer feature.
	Input a skill and item build and generate a dataset for levels 1 to 25 using the hero calculator.
	All datasets displayed in a table and chart.
- Added copy (CTRL+C) and paste (CTRL+V) when hovering over item inventories.
	Can also be used in Build Explorer item build section.
- Added option to dock shop panel to right side of screen.

2014-12-28
- Added Sven God's Strength scepter aura to buffs.

2014-12-26
- Fixed Troll Warlord Berserker's Rage breaking health and EHP when activated.

2014-12-21
- Maximum Attack Speed increased from 500 to 600

2014-12-15
- Fixed Windranger Focus Fire not reducing damage.
- Fixed Magic Resistance not stacking according to the patch 6.82 change.

2014-12-05
- Added Riki Backstab.

2014-11-13
- Added Troll Warlord Battle Trance to buffs.

2014-11-12
- Updated values to match 6.82c.
- Fixed Homing Missile giving max attack speed.

2014-10-24
- Added Abaddon Curse of Avernus as debuff.
- Fixed Curse of Avernus attack speed slow not applying.
- Curse of Avernus can now be toggled on and off.
- Fixed Spectre Dispersion not affecting EHP.

2014-10-23
- Fixed Physical EHP calculation for negative armor values.
- Fixed Ogre Magi Unrefined Fireblast being skillable.
- Fixed Power Treads attack speed stacking when it should not.
- Fixed bug where unskilling buffs would add to available skill points.

2014-09-23
- Added item abbreviations to item search box input, e.g. entering "gg" or "gg branch" will show Iron Branch as a result.

2014-09-22
- Movement speed cannot go below minimum of 100.